--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>C. Croy-Perrett' Epic Gaming Homepage</title>
+	<title>C. Croy-Perrett's Epic Gaming Homepage</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
