--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
 					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy.</p>
+					<p>Hi There :D! I am C. Croy-Perrett, and I enjoy coding games, and making digital art. I hope we can be friends!</p>
 			</div>
 
 		</section>
