--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>C. Croy-Perrett's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="salamander-photo" src="https://64.media.tumblr.com/8f829b495091eeb52a59ecc19e2a7836/tumblr_inline_p974vsOTTq1spa42l_1280.png">
+					<img class="salamander-photo" src="https://preview.redd.it/b3px90jwsix51.png?width=450&format=png&auto=webp&s=71a1b64a2cb3cd71c744cc7f5972f04989485a3d">
 					<h2>About Me</h2>
 					<p>Hi There :D! I am C. Croy-Perrett, and I enjoy coding games, and making digital art. I hope we can be friends!</p>
 			</div>
