--- a/index.html
+++ b/index.html
@@ -18,6 +18,44 @@
 	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
 </head>
 <body>
+
+	<img id="Caseythewizard" class="cat-photo photo" src="https://pbs.twimg.com/profile_images/2624211846/vbvs_400x400.png" alt="I am a Salamancer :3" />
+	<a href="https://mspaintadventures.fandom.com/wiki/Casey" target="_new">
+	<img id="Caseythewizard" class="adorable wizard" src="img/dancingmexicancasey.jpg" alt="I am a Salamancer :3" /> </a>
+	<a href="https://www.linkedin.com/in/chase-croy-perrett-013237260/" target="_new">My Linkeldin Page!</a>
+
+
+	<p> here are some things I can do as a wizard</p>
+	<ol>
+		<li>raise the dead</li>
+		<li>banish mosnters</li>
+		<li>make warm fire</li>
+		<li>and other magical things! :D </li>
+
+	</ol>
+
+	<b>
+	Woah! I descovered how to make bold text! Wizard!</b>
+
+	<i>
+     And now I'm doing Italices! How fancy~</i>
+
+    <u>Now with underlines, I am a MASTER of the typing arts! I am unstoppable! Muahahahaha!</u>
+
+	<h2>Subsection Magic</h2>
+	<h3>Now I'm itty bitty subsection!</h3>
+	<h4>Even littler!</h4>
+    
+	<dl>This is meant to be a definition I think! </dl>
+	<dd>Woah... DD... better than i thought I'd ever accomplish... </dd>
+
+	<dl>
+		<dt>Coffee</dt>
+		<dd>Black hot drink</dd>
+		<dt>Milk</dt>
+		<dd>White cold drink</dd>
+	  </dl> 
+
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
@@ -29,9 +67,28 @@
 					<p>Hi There :D! I am C. Croy-Perrett, and I enjoy coding games, and making digital art. I hope we can be friends!</p>
 			</div>
 
+
 		</section>
+        
+		<div class="major-section">
+			this is a new major section! Cool!
+		</div>
+
+
+		<section>
+		<h2>My Projects</h2>
+		<p>I have worked on a number of digital creative projects, and I would love if you were to check them out!</p>
+		<a href="https://atypicalcelestial.itch.io/amelia-kevlar" target="_new">Amelia Kevlar
+			<img id="Caseythewizard" class="adorable wizard" src="https://img.itch.zone/aW1nLzExOTUzNDQwLnBuZw==/315x250%23c/RGl95Q.png" alt="I am a Salamancer :3" /> </a>
+		</a>
+		<a href="https://jrockefeller.itch.io/droid-dungeon" target="_new">Droid Dungeon <img id="Caseythewizard" class="adorable wizard" src="https://img.itch.zone/aW1nLzgzOTA2OTMucG5n/315x250%23c/o5rv8Y.png" alt="I am a Salamancer :3" /></a>
+		<a href="https://atypicalcelestial.itch.io/bigfoot" target="_new">Bigfoot's Snowboots <img id="Caseythewizard" class="adorable wizard" src="https://img.itch.zone/aW1nLzgzMDkzMTQucG5n/315x250%23c/vbXcc%2B.png" alt="I am a Salamancer :3" /></a>
+	    </section>
+
 		<nav id="links">
 			<!-- Put links to labs here. -->
+			<h2>Art 101 Labs</h2>
+			<a href="https://docs.google.com/document/d/1tgJtz43pMOVo173vRVyvYcmSzqPYSpNQLAvqdz_tkkM/edit" target="_new">Lab 1!</a>
 		</nav>
 	</main>
 </body>
