--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,52 +1,62 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
-<head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+  <head>
+    <meta charset ="utf-8">
+    <title>Lab 2 - Our First HTML</title>
+  </head>
+  <a>
+    <!--<link rel="stylesheet" type="text/css" href="css\lab.css">-->
+  <body>
+    <div id="content">
+        <h1>Hello world! :D</h1>
+        <p> We are Chase Croy-Perrett and Joey Longo. </p>
+        <!--<img src = "https://media1.giphy.com/media/Qd8Fwmm0PgTcc/giphy.gif">--> 
+     
+    </div>
+    
+    <section>
+    <div class="Name">
+        <h1>Joey Longo</h1>
+    </div>
+    <!--<img src = https://i.imgur.com/UBp7CsD.png>-->
+    <div class="Desc">
+        <p>Hi my name is Joey, I'm a 3rd year AGPM major with a little bit of programming experience. 
+            I mainly play a lot of video games such as various Pokemon games, Terraria, Minecraft, and Super Smash Bros among others. 
+            More recently I've been doing a lot of amiibo training in Super Smash Bros Ultimate and doing amiibo tournaments with my friend. 
+            I like to draw digitally on occasion that I normally just make for myself, but I have also drawn emotes for discord and twitch. 
+            I also like to do some video editing sometimes but those are few and far between most of the time.</p>
+    </div>
+    </a>
+    </section>
 
-	<!-- Use UTF character set, a good idea with any webpage -->
-  	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
-</head>
-<body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-			</div>
+  <section>
+    <div class="Name">
+        <h1>Chase Croy Perrett</h1>
+    </div>
+    <!--<img src =https://imgur.com/Qjomx8j.png>-->
+    <div class="Desc">
+        <p>Hello! I am Chase Croy-Perrett, a UCSC computer science student, and I am exited to be here and learn!
+            I have long been interested in learning digital art and game design, I used to make projects on Scratch
+            (a rudimentary game-making website) for hours! And although I may be a little out of practice at the moment,
+            (due to school and other commitments...) I also enjoy drawing diggitaly with my tablet, although mostly comics & funny
+            bits about games I like. I'm making a lot of big changes, and I'm looking forewards to be able to show the 
+            world once I am done! I'll see you there!
+        </p>
+    </div>
+  </section>
 
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
 
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
+    <div class="Title">
+        <h2>What we have in common!</h2>
+    </div>
+    <div class="Desc">
+        <ul>
+            <li> Our love of Minecraft and Super Smash Brothers!
+            <li> We prefer using character icons rather than pictures of ourselves.
+            <li> Enjoyment of noodles.
+            <li> Excitment to be in ART101!
+        </ul>
+    </div>
 
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
-			</div>
-		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
-	</main>
-</body>
+  </body>
 </html>
