Added CSS Functionality

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -5,12 +5,12 @@
     <title>Lab 2 - Our First HTML</title>
   </head>
   <a>
-    <!--<link rel="stylesheet" type="text/css" href="css\lab.css">-->
+    <link rel="stylesheet" type="text/css" href="css\lab.css">
   <body>
     <div id="content">
         <h1>Hello world! :D</h1>
         <p> We are Chase Croy-Perrett and Joey Longo. </p>
-        <!--<img src = "https://media1.giphy.com/media/Qd8Fwmm0PgTcc/giphy.gif">--> 
+        <img src = "https://media1.giphy.com/media/Qd8Fwmm0PgTcc/giphy.gif">
      
     </div>
     
@@ -18,7 +18,7 @@
     <div class="Name">
         <h1>Joey Longo</h1>
     </div>
-    <!--<img src = https://i.imgur.com/UBp7CsD.png>-->
+    <img src = https://i.imgur.com/UBp7CsD.png>
     <div class="Desc">
         <p>Hi my name is Joey, I'm a 3rd year AGPM major with a little bit of programming experience. 
             I mainly play a lot of video games such as various Pokemon games, Terraria, Minecraft, and Super Smash Bros among others. 
@@ -33,7 +33,7 @@
     <div class="Name">
         <h1>Chase Croy Perrett</h1>
     </div>
-    <!--<img src =https://imgur.com/Qjomx8j.png>-->
+    <img src =https://imgur.com/Qjomx8j.png>
     <div class="Desc">
         <p>Hello! I am Chase Croy-Perrett, a UCSC computer science student, and I am exited to be here and learn!
             I have long been interested in learning digital art and game design, I used to make projects on Scratch
