--- a/lab2/index.html
+++ b/lab2/index.html
@@ -10,7 +10,7 @@
     <div id="content">
         <h1>Hello world! :D</h1>
         <p> We are Chase Croy-Perrett and Joey Longo. </p>
-        <img src = "https://media1.giphy.com/media/Qd8Fwmm0PgTcc/giphy.gif">
+        <!--<img src = "https://media1.giphy.com/media/Qd8Fwmm0PgTcc/giphy.gif">-->
      
     </div>
     
