Lab 3 Working (I think)
Whohooo!

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>C. Croy-Perrett's Epic Gaming Homepage</title>
+	<title>C. Croy-Perrett's Magical Homepage</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -17,79 +17,93 @@
 
 	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
 </head>
-<body>
+<body style="background-image: url('img\Caseythewizard.png');">
+	
 
-	<img id="Caseythewizard" class="cat-photo photo" src="https://pbs.twimg.com/profile_images/2624211846/vbvs_400x400.png" alt="I am a Salamancer :3" />
-	<a href="https://mspaintadventures.fandom.com/wiki/Casey" target="_new">
-	<img id="Caseythewizard" class="adorable wizard" src="img/dancingmexicancasey.jpg" alt="I am a Salamancer :3" /> </a>
-	<a href="https://www.linkedin.com/in/chase-croy-perrett-013237260/" target="_new">My Linkeldin Page!</a>
-
-
-	<p> here are some things I can do as a wizard</p>
-	<ol>
-		<li>raise the dead</li>
-		<li>banish mosnters</li>
-		<li>make warm fire</li>
-		<li>and other magical things! :D </li>
-
-	</ol>
-
-	<b>
-	Woah! I descovered how to make bold text! Wizard!</b>
-
-	<i>
-     And now I'm doing Italices! How fancy~</i>
-
-    <u>Now with underlines, I am a MASTER of the typing arts! I am unstoppable! Muahahahaha!</u>
-
-	<h2>Subsection Magic</h2>
-	<h3>Now I'm itty bitty subsection!</h3>
-	<h4>Even littler!</h4>
-    
-	<dl>This is meant to be a definition I think! </dl>
-	<dd>Woah... DD... better than i thought I'd ever accomplish... </dd>
-
-	<dl>
-		<dt>Coffee</dt>
-		<dd>Black hot drink</dd>
-		<dt>Milk</dt>
-		<dd>White cold drink</dd>
-	  </dl> 
+	<!--<img id="Caseythewizard" class="cat-photo photo" src="https://pbs.twimg.com/profile_images/2624211846/vbvs_400x400.png" alt="I am a Salamancer :3" />
+	<a href="https://mspaintadventures.fandom.com/wiki/Casey" target="_new">-->
+	<!--<img id="Caseythewizard" class="adorable wizard" src="img/dancingmexicancasey.jpg" alt="I am a Salamancer :3" /> </a>-->
+	<!--<a href="https://www.linkedin.com/in/chase-croy-perrett-013237260/" target="_new">My Linkeldin Page!</a>-->
 
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>C. Croy-Perrett's Homepage</h1>
+			<span style="font-size: 30.0pt;"><img  id="sparkle" src=".\img\Magic Sparcle.gif"/> <u><b>C. Croy-Perrett's Homepage</u></b>
+			<img src=".\img\Magic Sparcle.gif" id="sparkle"/></span>
+			<br>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="salamander-photo" src="https://preview.redd.it/b3px90jwsix51.png?width=450&format=png&auto=webp&s=71a1b64a2cb3cd71c744cc7f5972f04989485a3d">
+					<!--<img class="salamander-photo" src="https://preview.redd.it/b3px90jwsix51.png?width=450&format=png&auto=webp&s=71a1b64a2cb3cd71c744cc7f5972f04989485a3d">-->
+					<img id="my-portrait" src=".\img\ChaseConventionPortrait.jpeg" />
 					<h2>About Me</h2>
-					<p>Hi There :D! I am C. Croy-Perrett, and I enjoy coding games, and making digital art. I hope we can be friends!</p>
+					<p>Hi there :D! I am C. Croy-Perrett, a third year Computer Science Student at UCSC!
+						In my free time, I enjoy coding games and making digital art. My favorite pastimes
+						are creating builds in Minecraft, and honing my hand eye cooridination skills in the
+						platformer Celeste. My favorite memories come from playing the collaborative role-playing
+						game Dungeons and Dragons, having served as both player and dungeon master.
+						There is nothing more beautiful than coming together with some
+						friends to create a story for you all to share. I'm excited to be a part of art 101,
+						so I can learn even more about how to use technology to expand my artistic horizons! 
+					</p>
 			</div>
 
 
 		</section>
-        
-		<div class="major-section">
-			this is a new major section! Cool!
-		</div>
 
 
 		<section>
 		<h2>My Projects</h2>
-		<p>I have worked on a number of digital creative projects, and I would love if you were to check them out!</p>
-		<a href="https://atypicalcelestial.itch.io/amelia-kevlar" target="_new">Amelia Kevlar
-			<img id="Caseythewizard" class="adorable wizard" src="https://img.itch.zone/aW1nLzExOTUzNDQwLnBuZw==/315x250%23c/RGl95Q.png" alt="I am a Salamancer :3" /> </a>
-		</a>
-		<a href="https://jrockefeller.itch.io/droid-dungeon" target="_new">Droid Dungeon <img id="Caseythewizard" class="adorable wizard" src="https://img.itch.zone/aW1nLzgzOTA2OTMucG5n/315x250%23c/o5rv8Y.png" alt="I am a Salamancer :3" /></a>
-		<a href="https://atypicalcelestial.itch.io/bigfoot" target="_new">Bigfoot's Snowboots <img id="Caseythewizard" class="adorable wizard" src="https://img.itch.zone/aW1nLzgzMDkzMTQucG5n/315x250%23c/vbXcc%2B.png" alt="I am a Salamancer :3" /></a>
-	    </section>
+		<p>I have made a few small games, and I would love if you were to check them out!</p>
+		<ul id="maraut">
+         <li class="horiz">
+			<h4><a href="https://atypicalcelestial.itch.io/amelia-kevlar" target="_new">Amelia Kevlar</h4><br>
+			<img src="https://img.itch.zone/aW1nLzExOTUzNDQwLnBuZw==/315x250%23c/RGl95Q.png"/> <br></a>
+			A short point and click adventure! <br>Try to navigate a normal school life <br>while stuck with a gun for a hand!
+	     </li>
 
-		<nav id="links">
-			<!-- Put links to labs here. -->
-			<h2>Art 101 Labs</h2>
-			<a href="https://docs.google.com/document/d/1tgJtz43pMOVo173vRVyvYcmSzqPYSpNQLAvqdz_tkkM/edit" target="_new">Lab 1!</a>
-		</nav>
+		 <li class="horiz">
+			<h4><a href="https://jrockefeller.itch.io/droid-dungeon" target="_new">Droid Dungeon</h4><br>
+			<img src="https://img.itch.zone/aW1nLzgzOTA2OTMucG5n/315x250%23c/o5rv8Y.png"/> <br></a>
+			Fight your way through a robotic complex in this<br> 2D dungeoncrawler while balancing your <br>energy for offense and defense!
+	     </li>
+
+		 <li class="horiz">
+			<h4><a href="https://atypicalcelestial.itch.io/bigfoot" target="_new">Looking for Snowboots</h4><br>
+			<img src="https://img.itch.zone/aW1nLzgzMDkzMTQucG5n/315x250%23c/vbXcc%2B.png"/> <br></a>
+			A text based adventure about Bigfoot<br> trying to find some shoes.
+	     </li>
+
+
+		</ul>
+	    </section>
 	</main>
+
+	<section>
+		<div class="assignments major-section">
+			<h2 id="white">Art-101 Labs</h2>
+			<ul id="white">
+				<li> <h4> 1: Getting Started</h4>
+				<a href=".\PDFs\Art101-Lab1-3.pdf">The PDF</a></li>
+
+				<li><h4> Lab 2: Our First HTML</h4>
+			    <a href = "https://eldritchsalamancer.github.io/art101/lab2/">The Website</a>
+			    <a href = ".\PDFs\ART101 Lab 2-1.pdf">The PDF</a></li>
+
+				<li><h4> Lab 3: File Structure and Transfer</h4>
+				<a href = "https://docs.google.com/document/d/1JkKza4LvymmLDuDCwltl27mO0KHy5XaHc1-NiJtJh0E/edit">The PDF</a></li>
+
+				<li><h4> Lab 4: Pseudocoding and Problem Solving</h4>
+			    Coming soon!</li>
+
+				<li><h4> Lab 5: Data Types and Variables</h4>
+				Coming soon!</li>
+
+				<li><h4> Lab 6: Arrays and Objects</h4>
+					Coming soon!</li>
+
+			</ul>
+
+		</div> 
+	</section>
 </body>
 </html>
