--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE>
 <html>
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
   <head>
     <meta charset ="utf-8">
     <title>Lab 2 - Our First HTML</title>
