--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 			    <a href = ".\PDFs\ART101 Lab 2-1.pdf">The PDF</a></li>
 
 				<li><h4> Lab 3: File Structure and Transfer</h4>
+				<a href = "https://eldritchsalamancer.github.io/art101/lab3/">The Website</a>
 				<a href = "https://docs.google.com/document/d/1JkKza4LvymmLDuDCwltl27mO0KHy5XaHc1-NiJtJh0E/edit">The PDF</a></li>
 
 				<li><h4> Lab 4: Pseudocoding and Problem Solving</h4>
