--- a/lab3/index.html
+++ b/lab3/index.html
@@ -78,7 +78,7 @@
 							<li>Some of the code used for my homepage! That... is a lot of text..<br>
 							<img src="img\art101index editor.PNG"/></li>
 							<br>
-							<li> The code used for this page itself Woah, inception!<br>
+							<li> The code used for this page itself. Woah, inception!<br>
 							<img src="img\art101lab3code.PNG"/></li>
 							
 
