--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<a href = "https://docs.google.com/document/d/1JkKza4LvymmLDuDCwltl27mO0KHy5XaHc1-NiJtJh0E/edit">The PDF</a></li>
 
 				<li><h4> Lab 4: Pseudocoding and Problem Solving</h4>
-			    Coming soon!</li>
+				<a href = "https://wepurpypoo.github.io/art101/lab4/">The Website</a></li>
 
 				<li><h4> Lab 5: Data Types and Variables</h4>
 				Coming soon!</li>
