--- a/lab5/index.html
+++ b/lab5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variables</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,29 +23,37 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 5 - Data Types and Variables</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Create basic variables in javascript (string, number, and boolean). Then using these variables, create a program
+						that prints the variables.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>We had a minor issue with opening the javascript console in browser. When attempting
+						the steps to do so (ctrl + shift + J), we are presented with a long list of errors,
+					    but no console in which to give an input. We then realized however, that we were using firefox,
+				        the browser we were explicatley told not to use for this course. After shifting to another, we were
+			            able to open and utilize the browser's javascript console without issue.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>We had an easier time with assignment due to our existing knowledge in coding. The program ran without any
+						issues and the end result can be seen below. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<script src="js/lab.js"></script> 
 					<div id="output"></div>
 			</div>
 		</section>
 		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
+			<li><a href="https://eldritchsalamancer.github.io/art101/">My Homepage!</a></li>
 		</nav>
 	</main>
 </body>
