--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
 </head>
-<body style="background-image: url('img\Caseythewizard.png');">
+<body>
 	
 
 	<!--<img id="Caseythewizard" class="cat-photo photo" src="https://pbs.twimg.com/profile_images/2624211846/vbvs_400x400.png" alt="I am a Salamancer :3" />
