--- a/lab8/index.html
+++ b/lab8/index.html
@@ -24,20 +24,20 @@
 		<section>
 			<h1>Lab 8 - Anon Functions and Callbacks</h1>
 			<div class="minor-section">
-					<h2>Challenge</h2>
+					<h2 id="chal">Challenge</h2>
 					<p>Experiment with anonymous functions and callbacks in the console as well as in a javascript file.</p>
 					
 			</div>
 
 			<div class="minor-section">
-					<h2>Problems</h2>
+					<h2 id="prob">Problems</h2>
 					<p>We had a lot of problems trying to get the prompt() function to work along side with printing the results of that on the webpage. We eventually found 
 						out that we needed to use document.open() and move the script statement towards the bottom so it would print there instead of replacing the entire webpage.
 					</p>
 			</div>
 
 			<div class="minor-section">
-					<h2>Reflection</h2>
+					<h2 id="ref">Reflection</h2>
 					<p>We were able to do something funny for the functions we created and everything worked out for us very well. Aside from the text input issues, we were able to
 						learn and understand more about callbacks and anonymous functions through this lab. </p>
 			</div>
