--- a/lab15/index.html
+++ b/lab15/index.html
@@ -42,7 +42,13 @@
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>This was most definetley our most difficult assignment yet at first. Up untill now we have been mostly dealing with programming
+						basics and singular new functions, implimenting ajax was a whole different beast. It was quite difficult to figure out all the moving
+						pieces, especially when both the ajax functions and the APIs did not give as specific instructions as we would have liked. Especicially since
+						not a single source had all the data we needed (in an easily accessible form). However, now after finishing this assignment, this is definetley
+						the most valuable addition yet to our HTML skills. While before we were linkeded to rather small-scale endeavors, now it feels as if we have
+						all the data in the world at our fingertips.
+					</p>
 			</div>
 			<div class="minor-section">
 					<h2>Results</h2>
