--- a/lab15/index.html
+++ b/lab15/index.html
@@ -25,6 +25,7 @@
 	<main id="content">
 		<section>
 			<h1>Lab 15 - AJAX</h1>
+
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Using AJAX, get information from an API and display that information on the web page.</p>
@@ -51,6 +52,7 @@
 					</p>
 			</div>
 			<div class="minor-section">
+				<a href="js\lab.js">Link to Our Javascript File</a>
 					<h2>Results</h2>
 					<!--(Cheri, Chesto, Pecha, Rawst, Aspear, Leppa, Oran, Sitrus, Persim)-->
 					<div id="output">
