--- a/lab16/index.html
+++ b/lab16/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 15 - AJAX</title>
-
+	<title>Lab 16: JSON and APIs (XKCD comic!)</title>
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
 	<!-- Set viewport so page remains consistently scaled w narrow devices -->
@@ -17,7 +16,6 @@
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<title>Lab 16: JSON and APIs (XKCD comic!)</title>
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
@@ -28,17 +26,26 @@
 			<h1>Lab 16 - JSON and APIs (XKCD comic!)</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p></p>
+					<p>Experiment with JSON and APIs by using the XKCD comic API.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>Compared to the previous assignment, we had no trouble at all dealing with this API!
+						We may havegone a little overeager the last time... jumping straight into a complex
+					    API and having to figure out how to use them from scratch, that this was pretty much
+					no troble at all! This is the first webpage we have built however that changes it's Results
+				over time, giving reason to come back again later! </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>This assignment was an excellent culmination of everything we have learned so far.
+						While previous assignments were one-and-done exercises, showcasing some trick to the
+					    audience, they have no reason to ever come back after initial experimentation. But with a new
+				        comic being displayed every week, users have reasons to come back time and again!
+			            Now, with our new knowledge of APIs, I feel empowered, as if we have all the power of the internet
+					    at our fingertips! I am excited to put this knowledge to use in my final project.</p>
 			</div>
 
 			<div class="minor-section">
